[package]
name = "R1CS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "^0.4.0", features = [ "derive" ] }
ark-ff = { version = "^0.4.0"}
ark-poly = {version = "^0.4.0"}
ark-crypto-primitives = {version = "^0.4.0", features = ["sponge"] }
ark-std = { version = "^0.4.0", default-features = false }
ark-groth16 = "0.4.0"
ark-test-curves = { wversion = "^0.4.0", features = ["bls12_381_curve"] }
ark-relations = { version = "^0.4.0"}
ark-r1cs-std = { version = "^0.4.0"}
ark-bls12-377 = { version = "^0.4.0", features = [ "curve" , "r1cs" ] }
num-bigint = { version = "0.4", default-features = false }
rand_core = { version = "0.6", features = ["getrandom"] }
ark-bls12-381 = { version = "^0.4.0", features = ["curve"] }
derivative = { version = "2", features = [ "use_core" ] }
rayon = { version = "1"}
ark-ec = "0.4.2"
ark-bw6-761 = { version = "^0.4.0" }

[dev-dependencies]
ark-bls12-381 = { version = "^0.4.0", features = [ "curve"] }
ark-bls12-377 = { version = "^0.4.0", features = [ "curve", "r1cs"]  }
ark-mnt4-298 = { version = "0.4.0", default-features = false, features = ["r1cs", "curve"] }
rand_chacha = "0.3.1"

[features]
default = ["std"]
std = ["ark-ff/std", "ark-relations/std", "ark-std/std", "num-bigint/std"]
